# GRO-Pro

./: .gitignore  Makefile  README.md
H2Hcode/: CMakeLists.txt  H2H.cpp  head.h  main.cpp
KSP/: completeness.cpp  esx.cpp  kspwlo.h  multipass.cpp  onepass.cpp  onepass_plus.cpp  skyline.cpp  svp_plus.cpp
config/: config.yaml  config_beta4_large_cap.yaml  config_bj.yaml  config_bj_capacity2_cap10e8.yaml  config_bj_capacity2_cap10e8_iter5.yaml  config_bj_capacity2_cap10e8_iter5_timing.yaml  config_bj_capacity5_cap10e8.yaml  config_mh_capacity4_cap10e8_iter5.yaml  config_no_cap.yaml  config_no_cap_beta2.yaml  test_config.yaml
data/: EXPERIMENTAL_DATA_MANIFEST.md  MH_20hops1000.txt  NY_req_normal.txt  NY_req_rush.txt  public_release_inventory.csv
include/: core.hpp  data_structures.hpp  fahl.hpp  gor.hpp  gro.hpp  gro_slot_legacy.hpp  sor.hpp  svp.hpp
notes/: baselines.md  bj_real_queries.md  bj_synthetic_queries.md  contgro_slot_legacy.md  executables.md  gro_algorithm_changes.md  gro_debug_plan.md  gro_experiment_plan.md  gro_selection_debug_results.md  mh_real_queries.md  new_chat_handoff_rerouting.md  new_chat_handoff_vldb.md  paper_revision_notes.md  tdg_compression.md  tdg_impact_normalization.md
python/: analyze_reroute_debug_results.py  analyze_selection_debug_results.py  build_bj_real_high_congestion_scalability_queries.py  build_bj_real_scalability_queries.py  build_component_ablation_plot_data.py  build_scalability_figure.py  build_tdg_oracle_ablation.py  compare_selection_with_simple_baselines.py  display_mh_synthetic.py  display_mh_synthetic_png.py  (+15 more)
(+817 files in other folders)
